feat(pics): add like support
